add category search
