# src/middlewares/validators/category-validator.ts
@@ -1,19 +1,17 @@
 import { NextFunction } from 'express';
 import { validateSchema } from './utils/validate-schema';
 import { RequestWithSession } from '../../types/request-with-session';
-import { object, string } from 'joi';
-import { Category } from '../../models/category';
+import { number, object, string } from 'joi';
+import { Category, CategorySearchProperties } from '../../models/category';
 
 const categorySchema = object({
   name: string(),
   description: string()
 });
 
-export const validateCreateCategoryBody = (
-  req: RequestWithSession<Category>,
-  res: Response,
-  next: NextFunction
-) => {
+const categorySearchSchema = categorySchema.keys({ minRestaurantAmount: number().positive() });
+
+export const validateCreateCategoryBody = (req: RequestWithSession<Category>, res: Response, next: NextFunction) => {
   validateSchema(categorySchema, req.body, 'required');
   next();
 };
@@ -24,5 +22,14 @@ export const validateCategoryUpdateBody = (
   next: NextFunction
 ) => {
   validateSchema(categorySchema, req.body, 'optional');
+  next();
+};
+
+export const validateCategorySearchQueryParams = (
+  req: RequestWithSession<any, any, CategorySearchProperties>,
+  res: Response,
+  next: NextFunction
+) => {
+  validateSchema(categorySearchSchema, req.query, 'optional');
   next();
 };
